--- a/assets/provider/aws/params.yaml
+++ b/assets/provider/aws/params.yaml
@@ -6,6 +6,40 @@ Groups:
         default: "true"
         type: boolean
         description: Put nodes in private subnets behind NAT gateways - security best practice
+      - name: availability_zones
+        default: "null"
+        sideNote: "Convox managed if not set"
+        type: string
+        regex: "^([a-z]+-[a-z]+-\\d+[a-z])(,[a-z]+-[a-z]+-\\d+[a-z])+$"
+        description: Specify Availability Zones if you would don't want them to be chosen at random from your region. Comma separated list ~*e.g.* us-east-1b,us-east-1c,us-east-1d~
+      - name: vpc_id
+        default: "null"
+        type: string
+        regex: "^vpc-[0-9a-f]{17}$"
+        description: Used for installing a rack into an existing VPC. Make sure to also set the cidr block and internet_gateway_id parameters
+      - name: cidr
+        default: "10.1.0.0/16"
+        type: string
+        regex: "^((25[0-5]|2[0-4]\\d|1\\d\\d|[1-9]?\\d)\\.){3}(25[0-5]|2[0-4]\\d|1\\d\\d|[1-9]?\\d)\\/(3[0-2]|[12]?[0-9])$"
+        description: You should consider creating unique CIDR values ~*e.g.* 10.2.0.0/16 if you will ever want to peer VPCs~
+      - name: internet_gateway_id
+        default: "null"
+        sideNote: "Convox managed if not set"
+        type: string
+        regex: "^igw-[0-9a-f]{17}$"
+        description: If you want to install the rack into an existing VPC, enter the name id of the attached internet gateway
+      - name: private_subnets_ids
+        default: "null"
+        sideNote: "Convox managed if not set"
+        type: string
+        regex: "^subnet-[0-9a-f]{17}$"
+        description: **Advanced Configuration** - this parameter is for edge use cases where cluster needs to be installed into existing subnets. **Please see full documentation if you're considering this configuration.**
+      - name: public_subnets_ids
+        default: "null"
+        sideNote: "Convox managed if not set"
+        type: string
+        regex: "^subnet-[0-9a-f]{17}$"
+        description: **Advanced Configuration** - this parameter is for edge use cases where cluster needs to be installed into existing subnets. **Please see full documentation if you're considering this configuration.**
   - name: Security & Compliance
     order: 2
     params:
@@ -22,12 +56,12 @@ Groups:
         sideNote: "AWS default created unless set"
         type: string
         regex: "^sg-[0-9a-f]{8,17}$"
-        description: The ID of the custom security group to attach with the NLB. By default inbound traffic from any IP is allowed. Be cautious about this parameter, you might lose access to services by using improper security group.
+        description: ~The ID of the custom security group to attach with the NLB.~ ~By default inbound traffic from any IP is allowed.~ ~Be cautious about this parameter, you might lose access to services by using improper security group.~
       - name: tags
         default: "null"
         type: string
         regex: "^(\\w+=[^,]+)(,\\w+=[^,]+)*$"
-        description: Custom tags to add to AWS resources along side Convox managed tags - e.g. key1=val1,key2=val2
+        description: Custom tags to add to AWS resources along side Convox managed tags  ~*e.g.* key1=val1,key2=val2~
       - name: cert_duration
         default: "2160h"
         type: string
@@ -42,13 +76,13 @@ Groups:
         sideNote: "Nginx default unless set"
         type: string
         regex: "^([A-Za-z0-9_+-]+)(:[A-Za-z0-9_+-]+)*$"
-        description: Advanced Configuration - SSL ciphers to use for Nginx. They must be separated by colon.
+        description: **Advanced Configuration** - SSL ciphers to use for (Nginx)[https://nginx.org/en/docs/http/ngx_http_ssl_module.html#ssl_ciphers]. They must be separated by colon.
       - name: ssl_protocols
         default: "null"
         sideNote: "Nginx default unless set"
         type: string
         regex: "^(SSLv2|SSLv3|TLSv1|TLSv1\\.1|TLSv1\\.2|TLSv1\\.3)( (SSLv2|SSLv3|TLSv1|TLSv1\\.1|TLSv1\\.2|TLSv1\\.3))*$"
-        description: Advanced Configuration - SSL protocols to use for Nginx - e.g. TLSv1.2 TLSv1.3 - They must be separated by spaces.
+        description: **Advanced Configuration** - SSL protocols to use for (Nginx)[https://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_ssl_protocols]  ~e.g. TLSv1.2 TLSv1.3 - They must be separated by spaces.~
   - name: Networking
     order: 3
     params:
@@ -59,41 +93,7 @@ Groups:
       - name: proxy_protocol
         default: "false"
         type: boolean
-        description: With this parameter enabled, the client source IP will be available in the request header `x-forwarded-for` key. This is not applicable for internal_router
-      - name: cidr
-        default: "10.1.0.0/16"
-        type: string
-        regex: "^((25[0-5]|2[0-4]\\d|1\\d\\d|[1-9]?\\d)\\.){3}(25[0-5]|2[0-4]\\d|1\\d\\d|[1-9]?\\d)\\/(3[0-2]|[12]?[0-9])$"
-        description: You should consider creating unique CIDR values e.g. 10.2.0.0/16 if you will ever want to peer VPCs
-      - name: vpc_id
-        default: "null"
-        type: string
-        regex: "^vpc-[0-9a-f]{17}$"
-        description: Used for installing a rack into an existing VPC. Make sure to also set the cidr block and internet_gateway_id parameters
-      - name: internet_gateway_id
-        default: "null"
-        sideNote: "Convox managed if not set"
-        type: string
-        regex: "^igw-[0-9a-f]{17}$"
-        description: If you want to install the rack into an existing VPC, enter the name id of the attached internet gateway
-      - name: availability_zones
-        default: "null"
-        sideNote: "Convox managed if not set"
-        type: string
-        regex: "^([a-z]+-[a-z]+-\\d+[a-z])(,[a-z]+-[a-z]+-\\d+[a-z])+$"
-        description: Specify Availability Zones if you would don't want them to be chosen at random from your region. Comma separated list e.g. us-east-1b,us-east-1c,us-east-1d
-      - name: private_subnets_ids
-        default: "null"
-        sideNote: "Convox managed if not set"
-        type: string
-        regex: "^subnet-[0-9a-f]{17}$"
-        description: Advanced Configuration - this parameter is for edge use cases where cluster needs to be installed into existing subnets. Please see full documentation if you're considering this configuration.
-      - name: public_subnets_ids
-        default: "null"
-        sideNote: "Convox managed if not set"
-        type: string
-        regex: "^subnet-[0-9a-f]{17}$"
-        description: Advanced Configuration - this parameter is for edge use cases where cluster needs to be installed into existing subnets. Please see full documentation if you're considering this configuration.
+        description: With this parameter enabled, the client source IP will be available in the request header *x-forwarded-for* key. This is not applicable for internal_router
   - name: Performance & Scaling
     order: 4
     params:
@@ -115,23 +115,23 @@ Groups:
         default: "same as node_type"
         type: string
         regex: "^[a-z]+\\d\\.[a-z0-9]+$"
-        description: By default the build node will use the same instance type as the node_type
+        description: By default the build node will use the same instance type as the *node_type*
       - name: build_node_min_count
         default: "0"
         type: integer
-        description: By default the build node will scale out after 30min of inactivity. You can set this value to retain a number of build nodes if the node initialization time (45s) is too long for you
+        description: "~By default the build node will scale out after 30min of inactivity.~ ~You can set this value to retain a number of build nodes if the node initialization time (45s) is too long for you~"
       - name: node_capacity_type
         default: "on_demand"
         type: string
-        description: "on-demand - Will only use on demand instances (Highest availability/Highest Cost)\nspot - Will use AWS spot instances for the cluster nodes.\nmixed - Will create one node group with on demand instances, and the other 2 with spot instances. Use mixed with the min_on_demand_count and max_on_demand_count parameters to control the minimum acceptable service availability should all spot instances become unavailable."
+        description: "~on-demand - Will only use on demand instances (Highest availability/Highest Cost)~ ~spot - Will use AWS spot instances for the cluster nodes.~ ~mixed - Will create one node group with on demand instances, and the other 2 with spot instances. Use mixed with the *min_on_demand_count* and *max_on_demand_count* parameters to control the minimum acceptable service availability should all spot instances become unavailable.~"      
       - name: min_on_demand_count
         default: "1"
         type: integer
-        description: When used with `mixed` node capacity type, can set the minimum required number of on demand nodes
+        description: When used with *mixed* node capacity type, can set the minimum required number of on demand nodes
       - name: max_on_demand_count
         default: "100"
         type: integer
-        description: When used with `mixed` node capacity type, can set the maximum required number of on demand nodes
+        description: When used with *mixed* node capacity type, can set the maximum required number of on demand nodes
       - name: node_disk
         default: "20"
         type: integer
@@ -154,14 +154,14 @@ Groups:
         default: "null"
         type: string
         regex: "^(\\*|([0-5]?\\d)) (\\*|([01]?\\d|2[0-3])) (\\*|([1-9]|[12]\\d|3[01])) (\\*|([1-9]|1[0-2])) (\\*|[0-6])$"
-        description: "Rack scale down schedule is specified by the user following the Unix cron syntax format. Example: \"0 18 * * 5\" - Rack API and App's Services will be inaccessible during this time - Must also configure schedule_rack_scale_up"
+        description: "~Rack scale down schedule is specified by the user following the Unix cron syntax format.~ ~Example: \"0 18 * * 5\"~ ~Rack API and App's Services will be inaccessible during this time~ ~Must also configure *schedule_rack_scale_up*~"
       - name: schedule_rack_scale_up
         optional: true
         sideNote: "Not configured by default"
         default: "null"
         type: string
         regex: "^(\\*|([0-5]?\\d)) (\\*|([01]?\\d|2[0-3])) (\\*|([1-9]|[12]\\d|3[01])) (\\*|([1-9]|1[0-2])) (\\*|[0-6])$"
-        description: "Rack scale up schedule is specified by the user following the Unix cron syntax format. Example: \"0 0 * * 0\" - Must also configure schedule_rack_scale_down"
+        description: "~Rack scale up schedule is specified by the user following the Unix cron syntax format.~ ~Example: \"0 0 * * 0\"~  ~Must also configure *schedule_rack_scale_down*~"
   - name: Logging & Monitoring
     order: 5
     params:
