--- a/assets/provider/aws/params.yaml
+++ b/assets/provider/aws/params.yaml
@@ -143,7 +143,7 @@ Groups:
       - name: node_type
         default: t3.small
         type: string
-        regex: ^[a-z]+\d\.[a-z0-9]+$
+        regex: ^[a-z]+\d*[a-z]*\.\d*[a-z0-9]+(\.[a-z]+)?$
         description: AWS EC2 (Instance type)[https://aws.amazon.com/ec2/instance-types/] used for cluster nodes.
       - name: build_node_enabled
         default: "false"
@@ -154,7 +154,7 @@ Groups:
         optional: true
         default: t3.small
         type: string
-        regex: ^[a-z]+\d\.[a-z0-9]+$
+        regex: ^[a-z]+\d*[a-z]*\.\d*[a-z0-9]+(\.[a-z]+)?$
         description: |
           By default the build node will use the same instance type as the
           &i node_type &i
