--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - name: Install libudev-dev
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -17,6 +19,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - name: Install libudev-dev
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev
       - name: test
         run: make test
   tooling:
@@ -24,10 +28,12 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
-      - name: golang-1.19
+      - name: golang-1.23
         uses: actions/setup-go@v3
         with:
-          go-version: '1.19.10'
+          go-version: '1.23'
+      - name: Install libudev-dev
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev
       - name: tools
         run: make tools
       - name: cli
