--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,8 @@ jobs:
           go-version: '1.23'
       - name: version
         run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
-      - name: Install libudev-dev
-        run: sudo apt-get update && sudo apt-get install -y libudev-dev
+      - name: Install libudev-dev and gcc-aarch64-linux-gnu
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev && sudo apt-get install -y gcc-aarch64-linux-gnu
       - name: changelog
         id: changelog
         run: |
